--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,41 +2,43 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/Pseudo"
-        android:layout_width="399dp"
-        android:layout_height="43dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:backgroundTint="#FF9800"
         android:drawableBottom="#FF8800"
         android:ems="10"
         android:hint="Pseudo"
         android:inputType="textPersonName"
         android:textColorHint="#FF9800"
+        android:textColor="#FF9800"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.456" />
+        app:layout_constraintTop_toBottomOf="@id/imageView3"
+        app:layout_constraintVertical_bias="0.139" />
 
     <EditText
         android:id="@+id/MotDePasse"
-        android:layout_width="400dp"
-        android:layout_height="39dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:backgroundTint="#FF9800"
         android:contentDescription="Mot de passe"
         android:ems="10"
         android:hint="Mot de passe"
-        android:inputType="textPersonName|textPassword"
+        android:textColor="#FF9800"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:textColorHint="#FF9800"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/connexion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Pseudo"
         app:layout_constraintVertical_bias="0.162" />
@@ -45,7 +47,7 @@
         android:id="@+id/connexion"
         android:layout_width="225dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#FF9800"
         android:shadowColor="#000000"
         android:shadowDx="2"
@@ -53,16 +55,15 @@
         android:shadowRadius="1"
         android:text="Connexion"
         app:cornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/inscription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MotDePasse" />
 
     <Button
         android:id="@+id/inscription"
         android:layout_width="225dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="148dp"
         android:backgroundTint="#FF9800"
         android:shadowColor="#000000"
         android:shadowDx="2"
@@ -72,19 +73,18 @@
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/connexion"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="283dp"
         android:layout_height="117dp"
-        android:layout_marginTop="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/Pseudo"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/chatringan" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
